--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "cviebrock/eloquent-sluggable": "^10.0",
         "guzzlehttp/guzzle": "^7.2",
+        "inertiajs/inertia-laravel": "^0.6.9",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "spatie/laravel-permission": "^5.10",
-        "spatie/laravel-sluggable": "^3.5"
+        "tightenco/ziggy": "^1.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
