--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
-        "axios": "^1.1.2",
+        "axios": "^1.4.0",
         "flowbite": "^1.6.5",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.6",
@@ -17,6 +17,15 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "chart.js": "^4.3.0"
+        "@inertiajs/inertia-react": "^0.8.1",
+        "@inertiajs/react": "^1.0.7",
+        "@reduxjs/toolkit": "^1.9.5",
+        "@vitejs/plugin-react": "^4.0.0",
+        "chart.js": "^4.3.0",
+        "flowbite-react": "^0.4.7",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.0.7",
+        "sweetalert2": "^11.7.12"
     }
 }
