--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "spatie/laravel-permission": "^5.10",
-        "tightenco/ziggy": "^1.6"
+        "tightenco/ziggy": "^1.6",
+        "srmklive/paypal": "~3.0",
+        "stripe/stripe-php": "^9.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
