--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
         "@ckeditor/ckeditor5-react": "^6.0.0",
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/react": "^1.0.7",
+        "@paypal/paypal-js": "^6.0.0",
         "@reduxjs/toolkit": "^1.9.5",
         "@vitejs/plugin-react": "^4.0.0",
         "chart.js": "^4.3.0",
         "dropzone": "^6.0.0-beta.2",
         "flowbite-react": "^0.4.7",
+        "js-cookie": "^3.0.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-dropzone": "^14.2.3",
         "react-redux": "^8.0.7",
+        "react-router-dom": "^6.14.1",
         "react-select": "^5.7.3",
         "react-toastify": "^9.1.3",
         "sweetalert2": "^11.4.8"
