--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^5.10",
-        "tightenco/ziggy": "^1.6",
         "srmklive/paypal": "~3.0",
-        "stripe/stripe-php": "^9.7"
+        "stripe/stripe-php": "^9.7",
+        "tightenco/ziggy": "^1.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -33,7 +34,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/Helper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
