--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
         "@inertiajs/react": "^1.0.7",
         "@paypal/paypal-js": "^6.0.0",
         "@reduxjs/toolkit": "^1.9.5",
+        "@sweetalert2/theme-dark": "^5.0.15",
         "@vitejs/plugin-react": "^4.0.0",
         "chart.js": "^4.3.0",
+        "dompurify": "^3.0.5",
         "dropzone": "^6.0.0-beta.2",
         "flowbite-react": "^0.4.7",
+        "html-react-parser": "^4.0.0",
         "js-cookie": "^3.0.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -35,6 +38,7 @@
         "react-router-dom": "^6.14.1",
         "react-select": "^5.7.3",
         "react-toastify": "^9.1.3",
-        "sweetalert2": "^11.4.8"
+        "sweetalert2": "^11.4.8",
+        "tailwindcss-patterns": "^0.1.2"
     }
 }
